@@ -1,3 +1,7 @@
+MOG 1.7.9 Release date: TBD
+Fixed reading MOG projects created without metadata.
+
+
 MOG 1.7.8b Release date: 7/14/2019
 Fixed problems with executing R files on MAC
 Added support to load  list of R files directly from menu
